# gameserver-manager

./: INTEGRATION.md  README.md  flake.nix  gameserver-manager-spec.md  justfile  nixos-module.md  nixos-module.nix  overlay.nix  pyproject.toml
docs/: configuration.md  installation.md  usage.md
docs/examples/: 7days-to-die.nix
gameserver/: __init__.py  cli.py  exceptions.py  models.py
gameserver/services/: __init__.py  downloaders.py  registry.py  steam.py  systemd.py  validation.py
tests/: __init__.py  test_steam.py  test_systemd.py
tests/fixtures/: sample-config.json
