[project]
name = "gameserver-manager"
version = "0.1.0"
description = "A CLI tool for managing Nix-defined game services"
authors = [{name = "Jeff", email = "jeff@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0", 
    "pydantic>=2.0.0",
]

[project.scripts]
gameserver-manager = "gameserver.cli:app"

[project.urls]
Homepage = "https://github.com/slappy042/gameserver-manager"
Repository = "https://github.com/slappy042/gameserver-manager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gameserver"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "W291", "W292", "W293"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
